Consumo modelo REST

--- a/zgscx0002/src/main/webapp/WEB-INF/web.xml
+++ b/zgscx0002/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,8 @@
   <welcome-file>default.htm</welcome-file>
   <welcome-file>default.jsp</welcome-file>
 </welcome-file-list>
+<resource-ref>
+<res-ref-name>DevSAP</res-ref-name>
+<res-type>com.sap.core.connectivity.api.http.HttpDestination</res-type>
+</resource-ref>
 </web-app>
